<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:xmls="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        >
        <TextView
            android:id="@+id/InternetResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Speed Test Results"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/underline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="__________________"
            android:textSize="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20dp"
            android:layout_below="@id/InternetResults"
            />
        <TextView
            android:id="@+id/ipAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipAddress"
            android:textSize="16dp"
            android:layout_below="@id/underline"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ip_foreground"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/underline"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/ipAddress"
            android:text="@string/ipAddressValue"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/downloadSpeedTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloadSpeed"
            android:layout_below="@id/ipAddress"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/download_foreground"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/downloadSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ipAddress"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/downloadSpeedTab"
            android:text="@string/downloadValue"
            android:textSize="16dp" />
        <TextView
            android:id="@+id/uploadSpeedTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploadSpeed"
            android:layout_below="@id/downloadSpeed"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/upload_foreground"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/uploadSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadSpeed"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/uploadSpeedTab"
            android:text="@string/uploadValue"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/pingTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pingName"
            android:textSize="16dp"
            android:layout_below="@id/uploadSpeed"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_servers_foreground"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/pingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploadSpeed"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/pingTab"
            android:text="@string/pingValue"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/jitterTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jitterInfo"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_below="@id/pingNumber"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/waves_foreground"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/jitterNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pingNumber"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/jitterTab"
            android:text="@string/jitterValue"
            android:textSize="16dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
